# PUDU

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  write_dict_pudu_test.xlsx  write_dict_pudu_test_method.xlsx
.github/workflows/: python-package.yml
docs/: conf.py  index.rst  requirements.txt
docs/api/: assembly.rst  calibration.rst  generate_protocol.rst  index.rst  plating.rst  sample_preparation.rst  transformation.rst  utils.rst
docs/guide/: index.rst  installation.rst  workflow.rst
documentation/: manual_assembly_protocol_example.md
images/: images.md
notebooks/: Assembly_to_OT2sim.ipynb  Assembly_to_dict.ipynb  output.json
protocols/Multicolor_fluorescence_per_particle_calibration_protocol_igem/: Automated_protocol_user_instructions.xlsx  (+1 more)
scripts/: Automated_Golden_Gate.py  automatedCello_2.py  generate_manual_assembly_protocol.py  generate_manual_plating_protocol.py  output.json  run_Bacterial_Transformation.py  run_Chemical_Transformation.py  run_Chemical_Transformation_libre.py  run_Domestication.py  run_Loop_assembly.py  run_Loop_assembly_libre.py  run_Plate_samples.py  run_Plate_samples_libre.py  run_Plate_setup.py  run_Plate_supplemented_sample.py  run_Protocol_from_sbol.py  run_iGEM2022_rgb_od_libre.py  run_iGEM_gfp_od.py  run_iGEM_rgb_od.py  run_sbol2assembly_libre.py  run_sbol2assembly_with_params.py  run_sbol2transformation_with_params.py
src/pudu/: __init__.py  (+9 more)
tests/: Part_in_backbone_defined.xml  Part_in_backbone_example.xml  RyanTest.xml  backbone.xml  cds_in_bb.xml  ligation_test_forreal.xml  out_doc.xml  pro2_in_bb.xml  pro3_in_bb.xml  pro_in_bb.xml  rbs_in_bb.xml  terminator_in_bb.xml  test_all_scripts.py  test_manual_assembly.py  test_plating.py  test_transformation.py  validation_assembly.xml  validation_assembly1.xml
workflow_example/: Loop Assembly.xlsx  Test Updated PUDU Plating Protocol.json  Test Updated PUDU Plating Protocol.xlsx  assembly_input.json  plating_input.json  synbiosuite_transformation_input.json  test_advanced_params.json  test_metadata.json  test_protocol_assembly.py  test_protocol_plating.py  test_protocol_transformation.py  transformation_input.json
(+18 files in other folders)
