[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pudupy"
version = "1.0.0a2"
description = "Protocol Unified Design Unit"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["pudu", "lab", "automation", "opentrons", "synthetic biology"]
authors = [
  { name="Gonzalo Vidal", email="g.a.vidal-pena2@ncl.ac.uk" },
  { name="Carolus Vitalis", email="carlos.vidal.c@ug.uchile.cl"},
  { name="Matt Burridge", email="m.burridge1@newcastle.ac.uk"}
]
maintainers = [
  {name = "Gonzalo Vidal", email = "g.a.vidal-pena2@ncl.ac.uk"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  'opentrons',
  'sbol3',
]

[project.optional-dependencies]
test = [
  "pytest < 5.0.0",
  "pytest-cov[all]"
]

[project.urls]
"Homepage" = "https://github.com/RudgeLab/PUDU"
"Bug Tracker" = "https://github.com/RudgeLab/PUDU/issues"