[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pudupy"
version = "1.0.0b7"
description = "Protocol Unified Design Unit"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["pudu", "lab", "automation", "opentrons", "synthetic biology"]
authors = [
  { name="Gonzalo Vidal", email="govi9038@colorado.edu" },
  { name="Oscar Rodriguez", email="osro6012@colorado.edu"},
]
maintainers = [
  { name="Gonzalo Vidal", email="govi9038@colorado.edu" },
  { name="Oscar Rodriguez", email="osro6012@colorado.edu"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "opentrons>=8.4.1",
  "xlsxwriter>=3.2.5",
]

[project.optional-dependencies]
test = [
  "pytest >= 7.0.0",
  "pytest-cov"
]

[project.urls]
"Homepage" = "https://github.com/MyersResearchGroup/PUDU"
"Bug Tracker" = "https://github.com/MyersResearchGroup/PUDU/issues"
